add project detail export

--- a/dashboard/templates/admin/index.html
+++ b/dashboard/templates/admin/index.html
@@ -33,6 +33,11 @@
                     <th scope="row"><a href="{% url 'admin:project_intercompany_export' %}">Intercompany Export</a></th>
                 </tr>
             {% endif %}
+            {% if perms.prototype.projectdetailexport_project %}
+                <tr class="model-">
+                    <th scope="row"><a href="{% url 'admin:project_projectdetail_export' %}">Project Detail Export</a></th>
+                </tr>
+            {% endif %}
         </table>
     </div>
 {% endif %}
