--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -148,6 +148,7 @@
                 <li class="service"><a href="/services/">Service Overview</a></li>
                 <li class="portfolio"><a href="/portfolio">Portfolio Summary</a></li>
                 <li class="admin"><a href="/admin">Admin</a></li>
+                <li class="user-menu"><a>{{ request.user.username }}</a></li>
             </ul>
         </div>
     </div>
