--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -213,6 +213,7 @@
 <!--[if gt IE {% block js_gt_ie %}5{% endblock %}]><!-->
 <script src="{% static 'javascripts/vendor/jquery/jquery-1.11.0.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'javascripts/moj.js' %}" type="text/javascript"></script>
+<script src="{% static 'prototype_admin/js/dropdown_filter.js' %}"></script>
 
 {% block javascripts %}{% endblock %}
 
