--- a/dashboard/templates/project.html
+++ b/dashboard/templates/project.html
@@ -8,21 +8,6 @@
     <!--[if lt IE 8]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-    <strong>Choose a project</strong>
-    <p>e.g claim for crown court defence</p>
-    <select id="projects">
-      {% for service_name, projects in services.items %}
-        <optgroup label="{{ service_name }}">
-        {% for id, name in projects.items %}
-          {% if id == project.id %}
-          <option value="{{ id }}" selected>{{ name }}</option>
-          {% else %}
-          <option value="{{ id }}">{{ name }}</option>
-          {% endif %}
-        {% endfor %}
-        </optgroup>
-      {% endfor %}
-    </select>
+    {% include "project_selector.html" %}
     <div id="fig-a"></div>
 {%  endblock %}
