Alternative dropdown menu

--- a/dashboard/apps/prototype_admin/static/prototype_admin/styles/custom.css
+++ b/dashboard/apps/prototype_admin/static/prototype_admin/styles/custom.css
@@ -239,5 +239,11 @@ div#toolbar div {
 }
 
 #user-menu-dropdown {
-    z-index: 1000;
+    z-index: 999;
+    /*display: inline-block;*/
+    /*position: relative;*/
+}
+
+#user-menu-options {
+    display: none;
 }
