--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -151,11 +151,12 @@
                 <li class="user-menu">
                     <div id="user-menu-dropdown">
                         <a id="user-menu-button">{{ request.user.username }}</a>
-                        <br/>
-                        <ul>
-                            <li class="user-menu-item"><a href="/logout">Logout</a></li>
-                            <li class="user-menu-item"><a href="/password_change">Change Password</a></li>
-                        </ul>
+                        <div id="user-menu-options">
+                            <ul>
+                                <li class="user-menu-item"><a href="/logout">Logout</a></li>
+                                <li class="user-menu-item"><a href="/password_change">Change Password</a></li>
+                            </ul>
+                        <div>
                     </div>
                 </li>
             </ul>
