--- a/dashboard/apps/prototype_admin/static/prototype_admin/styles/custom.css
+++ b/dashboard/apps/prototype_admin/static/prototype_admin/styles/custom.css
@@ -239,7 +239,8 @@ div#toolbar div {
 }
 
 #user-menu-dropdown {
-    z-index: 999;
+    float: right;
+    /*z-index: 999;*/
     /*display: inline-block;*/
     /*position: relative;*/
 }
