phase and rag tags

--- a/dashboard/apps/prototype/static/styles/main.css
+++ b/dashboard/apps/prototype/static/styles/main.css
@@ -43,3 +43,53 @@ img.rag {
 img.status {
   height: 21px;
 }
+
+.banner .phase-tag,
+.banner .rag-tag {
+  display: -moz-inline-stack;
+  display: inline-block;
+  margin: 0 8px 0 0;
+  padding: 2px 5px 0;
+  font-family: "nta", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  font-weight: 700;
+  text-transform: none;
+  font-size-adjust: 0.525;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.phase-tag-discovery {
+  background-color: #972c86;
+}
+
+.phase-tag-alpha {
+  background-color: #d53880;
+}
+
+.phase-tag-beta {
+  background-color: #f47738;
+}
+
+.phase-tag-live {
+  background-color: #839951;
+}
+
+.phase-tag-ended {
+  background-color: #c0c0c0;
+}
+
+.rag-tag-red {
+  background-color: red;
+}
+
+.rag-tag-amber {
+  background-color: #FFBF00;
+}
+
+.rag-tag-green {
+  background-color: green;
+}
