--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -93,3 +93,26 @@ img.status {
 .rag-tag-green {
   background-color: green;
 }
+
+/* tabs */
+.product-tabs [role=tablist] {
+  border-bottom: 1px solid #aaa;
+  margin: 0 0 10px;
+  padding: 0;
+}
+
+.product-tabs [role=tab] {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-bottom: none;
+  bottom: -1px;
+  position: relative;
+  list-style: none;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.product-tabs [role=tab][aria-selected=true] {
+  border-style: solid;
+  border-bottom-color: #005ea5;
+}
