change content to main so base content is not overwritten

--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -158,7 +158,7 @@
 <div id="wrapper" class="group">
     <section id="content" role="main">
 
-            {% block content %}
+            {% block main %}
             {% endblock %}
 
     </section>
