--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -116,3 +116,9 @@ img.status {
   border-style: solid;
   border-bottom-color: #005ea5;
 }
+
+
+/* TODO: find a better way to left align the graphs */
+div.js-plotly-plot {
+  margin-left: -50px;
+}
