change login template to be same as admin login and add ling for forgotten password

--- a/dashboard/templates/admin/login.html
+++ b/dashboard/templates/admin/login.html
@@ -19,4 +19,5 @@
     <input class="button" type="submit" value="Sign in"/>
     <input type="hidden" name="next" value="{{ next }}"/>
   </form>
+  <a href="/password_reset/">Forgotten password</a>
 {% endblock %}
