--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -112,11 +112,11 @@ img.status {
   cursor: pointer;
 }
 
-.product-tabs [role=tab][aria-selected=true] {
+.product-tabs [role=tab][aria-selected=true],
+.product-tabs [role=tab]:hover {
   border-style: solid;
   border-bottom-color: #005ea5;
 }
-
 
 /* TODO: find a better way to left align the graphs */
 div.js-plotly-plot {
