--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -118,7 +118,7 @@ img.status {
   border-bottom-color: #005ea5;
 }
 
-/* TODO: find a better way to left align the graphs */
+/* TODO: find a better way to align the graphs */
 div.js-plotly-plot {
   margin-left: -50px;
 }
