--- a/dashboard/templates/admin/change_list_results.html
+++ b/dashboard/templates/admin/change_list_results.html
@@ -20,7 +20,7 @@
        </div>
      {% endif %}
    {% endif %}
-   <div class="text">{% if header.sortable %}<a href="{{ header.url_primary }}">{{ header.text|capfirst }}</a>{% else %}<span>{{ header.text|capfirst }}</span>{% endif %}</div>
+   {% if header.sortable %}<a href="{{ header.url_primary }}">{{ header.text|capfirst }}</a>{% else %}<span>{{ header.text|capfirst }}</span>{% endif %}
    <div class="clear"></div>
 </th>{% endfor %}
 </tr>
