--- a/dashboard/templates/admin/change_list_results.html
+++ b/dashboard/templates/admin/change_list_results.html
@@ -11,17 +11,20 @@
 <tr>
 {% for header in result_headers %}
 <th scope="col" {{ header.class_attrib }}>
-   {% if header.sortable %}
-     {% if header.sort_priority > 0 %}
-       <div class="sortoptions">
-         <a class="sortremove" href="{{ header.url_remove }}" title="{% trans "Remove from sorting" %}"></a>
-         {% if num_sorted_fields > 1 %}<span class="sortpriority" title="{% blocktrans with priority_number=header.sort_priority %}Sorting priority: {{ priority_number }}{% endblocktrans %}">{{ header.sort_priority }}</span>{% endif %}
-         <a href="{{ header.url_toggle }}" class="toggle {% if header.ascending %}ascending{% else %}descending{% endif %}" title="{% trans "Toggle sorting" %}"></a>
-       </div>
-     {% endif %}
-   {% endif %}
-   {% if header.sortable %}<a href="{{ header.url_primary }}">{{ header.text|capfirst }}</a>{% else %}<span>{{ header.text|capfirst }}</span>{% endif %}
-   <div class="clear"></div>
+    {% if header.sortable %}
+        <a href="{{ header.url_primary }}">
+            {{ header.text|capfirst }}
+        </a>
+        {% if header.sort_priority > 0 and num_sorted_fields > 1 %}<span class="sortpriority" title="{% blocktrans with priority_number=header.sort_priority %}Sorting priority: {{ priority_number }}{% endblocktrans %}">{{ header.sort_priority }}</span>{% endif %}
+        {% if header.sort_priority > 0 %}
+            <span class="sortoptions">
+                <a class="sortremove" href="{{ header.url_remove }}" title="{% trans "Remove from sorting" %}">x</a>
+                <a href="{{ header.url_toggle }}" class="toggle {% if header.ascending %}ascending{% else %}descending{% endif %}" title="{% trans "Toggle sort order" %}">{% trans "Toggle sort order" %}</a>
+            </span>
+        {% endif %}
+    {% else %}
+      <span>{{ header.text|capfirst }}</span>
+    {% endif %}
 </th>{% endfor %}
 </tr>
 </thead>
