--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -127,3 +127,20 @@ h1 a.button {
   float: right;
   font-size: 16px;
 }
+
+#product-info h3 {
+  margin-top: 50px;
+}
+
+.status-green {
+  color: #006435;
+}
+
+.status-amber {
+  color: #F47738;
+
+}
+
+.status-red {
+  color: #B10E1E;
+}
