--- a/dashboard/assets/common/common.css
+++ b/dashboard/assets/common/common.css
@@ -4,6 +4,13 @@
   width: auto;
   _width: 1280px;
   min-height: 400px;
+  padding-left: 15px;
+  padding-right: 5px;
+}
+@media (max-width: 800px) {
+    #content {
+        padding-left: 5px;
+    }
 }
 
 #global-header-bar {
