--- a/dashboard/templates/admin/prototype/upload.html
+++ b/dashboard/templates/admin/prototype/upload.html
@@ -1,12 +1,101 @@
 {% extends "admin/base.html" %}
 {% load i18n admin_modify %}
 
-{% block content %}
-  <h1>Upload payroll</h1>
+{% load staticfiles %}
+{% block extrastyle %}
+  <link rel="stylesheet" type="text/css" href="{% static "admin/dashboard/styles/gov-uk-elements.css" %}"/>
+  <!-- <link rel="stylesheet" type="text/css" href="{% static "admin/dashboard/styles/dropzone.css" %}"/> -->
+  <link rel="stylesheet" type="text/css" href="{% static "admin/dashboard/styles/upload.css" %}"/>
+{% endblock %}
 
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-  <input class="button" type="submit" value="Upload payroll" />
-  </form>
+{% block javascripts %}
+<script src="{% static 'admin/dashboard/js/vendor/dropzone.js' %}"></script>
+<script src="{% static 'admin/dashboard/js/vendor/attrchange.js' %}"></script>
+<script src="{% static 'admin/dashboard/js/file_upload.js' %}"></script>
+<script>
+
+</script>
+{% endblock %}
+
+{% block content %}
+<div class="grid-row">
+  <div class="column-two-thirds">
+
+    <h1 class="heading-medium util_mt-0">Upload payroll</h1>
+
+    <form class="dropzone" action="." method="post" enctype="multipart/form-data" id="id_payroll_file">
+      {% csrf_token %}
+
+<!-- JOSH - this is the right markup for the single date box that Mazza wants -->
+<!--
+      <div class="form-group">
+        <label class="form-label" for="payroll_date">
+          Enter month:
+          <span class="form-hint">For example 01/2016</span>
+        </label>
+        <input class="form-control" type="text" id="payroll_date" >
+      </div>
+ -->
+
+ <!-- JOSH - this is just here so the form will work for now -->
+      <div class="form-group">
+        <select id="id_date_month" name="date_month">
+          <option value="0">---</option>
+          <option value="1">January</option>
+          <option value="2">February</option>
+          <option value="3">March</option>
+          <option value="4">April</option>
+          <option value="5">May</option>
+          <option value="6">June</option>
+          <option value="7">July</option>
+          <option value="8">August</option>
+          <option value="9">September</option>
+          <option value="10">October</option>
+          <option value="11">November</option>
+          <option value="12">December</option>
+        </select>
+
+        <select id="id_date_year" name="date_year">
+          <option value="0">---</option>
+          <option value="2012">2012</option>
+          <option value="2013">2013</option>
+          <option value="2014">2014</option>
+          <option value="2015">2015</option>
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+          <option value="2018">2018</option>
+        </select>
+      </div>
+
+      <div id="dropzone-box" class="form-group">
+
+        <div class="form-group fallback">
+          <input type="file" name="payroll_file">
+        </div>
+
+        <p class="dropzone-message">Drag and drop payroll file here <span>or </span><button class="dz-clickable button secondary">Choose file</button></p>
+
+      </div>
+
+      <div class="form-group file-submit">
+        <button class="button" type="submit">Upload payroll</button>
+      </div>
+    </form>
+
+  </div>
+</div>
+
+<div id="preview-template" class="hidden">
+  <div class="dz-preview dz-file-preview">
+    <div class="dz-details">
+      <div class="dz-size"><span data-dz-size></span></div>
+      <div class="dz-filename"><span data-dz-name></span></div>
+
+      <div class="dz-error-message"><span data-dz-errormessage></span></div>
+
+      <button class="js-remove-button button secondary">Remove</button>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
