--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -144,3 +144,22 @@ h1 a.button {
 .status-red {
   color: #B10E1E;
 }
+
+.lockout-message {
+    width: 200px;
+    margin-top: 100px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.griddle-filter {
+    padding: 0 0 30px;
+}
+
+.griddle-body thead th {
+    vertical-align: top;
+}
+
+.griddle-body td.money-value {
+    text-align: right;
+}
