--- a/dashboard/templates/admin/prototype/upload.html
+++ b/dashboard/templates/admin/prototype/upload.html
@@ -23,52 +23,23 @@
 
     <h1 class="heading-medium util_mt-0">Upload payroll</h1>
 
-    <form class="dropzone" action="." method="post" enctype="multipart/form-data" id="id_payroll_file">
+    <form class="dropzone" action="." method="post" enctype="multipart/form-data" id="id_payroll_form">
       {% csrf_token %}
+      <input id="id_payroll_file" type="file" name="payroll_file" class="hidden">
 
-<!-- JOSH - this is the right markup for the single date box that Mazza wants -->
-<!--
+      <p class = errors">{{ form.non_field_errors }}</p>
+
       <div class="form-group">
+        <p class = errors">{{ form.date.errors }}</p>
         <label class="form-label" for="payroll_date">
           Enter month:
-          <span class="form-hint">For example 01/2016</span>
+          <span class="form-hint">For example 01 2016</span>
         </label>
-        <input class="form-control" type="text" id="payroll_date" >
-      </div>
- -->
-
- <!-- JOSH - this is just here so the form will work for now -->
-      <div class="form-group">
-        <select id="id_date_month" name="date_month">
-          <option value="0">---</option>
-          <option value="1">January</option>
-          <option value="2">February</option>
-          <option value="3">March</option>
-          <option value="4">April</option>
-          <option value="5">May</option>
-          <option value="6">June</option>
-          <option value="7">July</option>
-          <option value="8">August</option>
-          <option value="9">September</option>
-          <option value="10">October</option>
-          <option value="11">November</option>
-          <option value="12">December</option>
-        </select>
-
-        <select id="id_date_year" name="date_year">
-          <option value="0">---</option>
-          <option value="2012">2012</option>
-          <option value="2013">2013</option>
-          <option value="2014">2014</option>
-          <option value="2015">2015</option>
-          <option value="2016">2016</option>
-          <option value="2017">2017</option>
-          <option value="2018">2018</option>
-        </select>
+        {{ form.date }}
       </div>
 
+      <p class = errors">{{ form.payroll_file.errors }}</p>
       <div id="dropzone-box" class="form-group">
-
         <div class="form-group fallback">
           <input type="file" name="payroll_file">
         </div>
