--- a/dashboard/assets/styles/main.css
+++ b/dashboard/assets/styles/main.css
@@ -1,3 +1,19 @@
+#content {
+  margin: auto;
+  max-width: 1280px;
+  width: auto;
+  _width: 1280px;
+  min-height: 400px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+@media (min-width: 641px) {
+    #content {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
 strong {
     font-weight: bold;
 }
@@ -8,9 +24,15 @@ strong {
   }
 }
 
-.portfolio-header {
-  padding: 0 5px;
+/*.portfolio-header {
+  padding: 0 15px;
 }
+@media (min-width: 641px) {
+  .portfolio-header {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}*/
 
 button.update-from-float {
     float: right;
@@ -136,7 +158,7 @@ h1 a.button {
 }
 
 .griddle-filter {
-    padding: 0 0 30px 5px;
+  padding: 0 0 30px;
 }
 
 .griddle-body thead th {
