--- a/dashboard/templates/admin/base.html
+++ b/dashboard/templates/admin/base.html
@@ -74,8 +74,10 @@
     <div class="main-section">
         <!-- Content -->
         <div class="{% block coltype %}colM{% endblock %}">
+          <div class="pad">
             {% block pretitle %}{% endblock %}
             {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+          </div>
             {% block content %}
                 {% block object-tools %}{% endblock %}
                 {{ content }}
