--- a/dashboard/assets/common/common.css
+++ b/dashboard/assets/common/common.css
@@ -1,3 +1,11 @@
+#content {
+  margin: auto;
+  max-width: 1280px;
+  width: auto;
+  _width: 1280px;
+  min-height: 400px;
+}
+
 #global-header-bar {
 
     max-width: 1280px;
